--- a/app/views/products/main.html.erb
+++ b/app/views/products/main.html.erb
@@ -288,8 +288,7 @@
           <br><br>
           Гармоничное развитие и рост ребенка зависит от полноценного состава его рациона питания и самый идеальный продукт – это грудное материнское молоко, которое тоже должно быть максимально полноценным. Источником практически всех незаменимых питательных веществ являются ядра кедрового ореха, с рекордно высоким содержанием белка (25г на 100г), имеющим все 20 аминокислот и отличающимся высокой усвояемостью до 95%.
         </p>
-
-        <a data-target=".js--cat-5" class="js--filter-selectable" href="#">Подробнее...</a>
+        <%= link_to "Подробнее...", prod_path %>
       </div>
     </div>
   </div>
