--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <meta name='yandex-verification' content='647b0b36ecde65ce' />
   <meta name="google-site-verification" content="EERAOWRn8XsV02oN1mnGkXFMZT19EyJHVQrNVwC41_4" />
   <%= favicon_link_tag 'favicon.png' %>
+
   <title>Звенящие кедры России - Липецк</title>
+  <link rel="stylesheet" href="/assets/main.css" />
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
