--- a/app/views/products/shop.html.erb
+++ b/app/views/products/shop.html.erb
@@ -84,7 +84,15 @@
                   </div>
                 </figure>
                 <div class="row">
-                  <div class="col-xs-12">
+                  <div class="col-xs-6">
+                    <% if product.cb_old_price? && !product.price.nil? %>
+                      <div class="products__price line-through red">
+                        <%= product.old_price %> р.
+                      </div>
+                    <% end %>
+                  </div>
+
+                  <div class="col-xs-6">
                     <div class="products__price">
                       <% if product.price.nil?%>
                         <%= link_to "Заказать", order_path(:order_name => product.name) %>
