--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -61,8 +61,15 @@
               <%= link_to "Заказать", order_path(:order_name => @product.name) %>
             <% else %>
               <%= @product.price %> р.
+              &nbsp&nbsp
+              <% if @product.cb_old_price? && !@product.price.nil? %>
+                <span class="line-through red">
+                  <%= @product.old_price %> р.
+                </span>
+              <% end %>
             <% end %>
           </span>
+
           <hr class="bold__divider">
           <p class="single-product__text">
             <%= simple_format @product.description %>
@@ -97,21 +104,31 @@
               </div>
             </figure>
             <div class="row">
-              <div class="col-xs-8">
+              <div class="col-xs-7">
                 <h5 class="products__title">
                   <%= link_to product, class: "products__link  js--isotope-title" do %>
                     <%= product.name %>
                   <% end %>
                 </h5>
               </div>
-              <div class="col-xs-4">
-                <div class="products__price">
-                  <% if product.price.nil?%>
-                    <%= link_to "Заказать", order_path(:order_name => product.name) %>
-                  <% else %>
-                    <%= product.price %> р.
-                  <% end %>
+              <div>
+                <div class="col-xs-5">
+                  <div class="products__price">
+                    <% if product.price.nil?%>
+                      <%= link_to "Заказать", order_path(:order_name => product.name) %>
+                    <% else %>
+                      <%= product.price %> р.
+                    <% end %>
+                  </div>
                 </div>
+
+                <% if product.cb_old_price? && !product.price.nil? %>
+                  <div class="col-xs-5">
+                    <div class="products__price line-through red">
+                      <%= product.old_price %> р.
+                    </div>
+                  </div>
+                <% end %>
               </div>
             </div>
             <div class="products__category">
