--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -108,6 +108,9 @@
                 <%= link_to "Продукция", shop_path %>
               </li>
               <li class="dropdown">
+                <%= link_to "Статьи", main_articles_path %>
+              </li>
+              <li class="dropdown">
                 <%= link_to "Контакты", contact_path %>
               </li>
             </ul>
