--- a/app/views/products/main.html.erb
+++ b/app/views/products/main.html.erb
@@ -135,10 +135,10 @@
     </div>
   </div>
   <!-- Banners big -->
-  <div class="banners--big  banners--big-left">
+  <div class="banners--big banners--big-left">
     <div class="row">
       <div class="col-xs-12  col-md-12">
-        <div class="banners--big__text">
+        <div class="banners--big__text mega">
           Возможна отправка нашей продукции в другие города по <strong>специальным ценам!</strong>
         </div>
       </div>
