--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,7 +11,7 @@
 
             <a class="social-container" href="http://www.facebook.com/pages/Megre-LLC/148501691860639"><span class="zocial-facebook"></span></a>
             <a class="social-container" href="http://twitter.com/megreru"><span class="zocial-twitter"></span></a>
-            <a class="social-container" href="http://vk.com/id147567881"><span class="zocial-vk"></span></a>
+            <a class="social-container" href="https://vk.com/club89583409"><span class="zocial-vk"></span></a>
             <a class="social-container" href="http://www.youtube.com/user/vmegrecom/"><span class="zocial-youtube"></span></a>
           </div>
         </div>
