--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <meta name="author" content="INITweb">
   <meta name='yandex-verification' content='647b0b36ecde65ce' />
   <meta name="google-site-verification" content="EERAOWRn8XsV02oN1mnGkXFMZT19EyJHVQrNVwC41_4" />
-  <%= favicon_link_tag 'favicon.png' %>
+  <%= favicon_link_tag 'favicon.png', type: 'image/png'%>
 
   <title>Звенящие кедры России - Липецк</title>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
