--- a/app/views/products/main.html.erb
+++ b/app/views/products/main.html.erb
@@ -16,7 +16,7 @@
 <div class="jumbotron  js--add-gradient">
   <div class="container">
     <div class="jumbotron__container">
-      <img alt="Logo" src="assets/pic_dark_wood_ak.png">
+      <%= link_to image_tag('pic_dark_wood_ak.png', :alt => "Logo"), main_articles_path %>
       <h2 class="jumbotron__subtitle">
         Официальный диллер продукции в Липецке и Липецкой области
       </h2>
