--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -8,11 +8,10 @@
             <p class="push-down-15" align="justify">
               Вся кедровая продукция изготавливается по старинным технологиям! Кедровое масло отжимается таёжным способом на ручном деревянном прессе из кедра! Сбор живицы производится в районах Сибирской тайги! Термической обработке не подвергается! Очищается вручную!
             </p>
-
-            <a class="social-container" href="http://www.facebook.com/pages/Megre-LLC/148501691860639"><span class="zocial-facebook"></span></a>
-            <a class="social-container" href="http://twitter.com/megreru"><span class="zocial-twitter"></span></a>
-            <a class="social-container" href="https://vk.com/club89583409"><span class="zocial-vk"></span></a>
-            <a class="social-container" href="http://www.youtube.com/user/vmegrecom/"><span class="zocial-youtube"></span></a>
+            <%= link_to image_tag("facebook.png", height: '48', alt: "soc"), "http://www.facebook.com/pages/Megre-LLC/148501691860639", class: "soc" %>
+            <%= link_to image_tag("twitter.png", height: '48', alt: "soc"), "http://twitter.com/megreru", class: "soc" %>
+            <%= link_to image_tag("vkontakte.png", height: '48', alt: "soc"), "https://vk.com/club89583409", class: "soc" %>
+            <%= link_to image_tag("youtube.png", height: '48', alt: "soc"), "http://www.youtube.com/user/vmegrecom/", class: "soc" %>
           </div>
         </div>
         <div class="col-xs-12  col-sm-3">
