--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -97,7 +97,7 @@
                 <%= link_to "Главная", root_path %>
               </li>
               <li class="dropdown">
-                <%= link_to about_path, class: "dropdown-toggle" do %>О компании<b class="caret"></b><% end %>
+                <%= link_to class: "dropdown-toggle" do %>О компании<b class="caret"></b><% end %>
                 <ul class="dropdown-menu">
                   <li><%= link_to "О компании", about_path %></li>
                   <li><%= link_to "Производство", prod_path %></li>
@@ -107,7 +107,11 @@
                 <%= link_to "Продукция", shop_path %>
               </li>
               <li class="dropdown">
-                <%= link_to "Статьи", main_articles_path %>
+                <%= link_to class: "dropdown-toggle" do %>Статьи<b class="caret"></b><% end %>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Статьи", main_articles_path %></li>
+                  <li><%= link_to "Видео", main_videos_path %></li>
+                </ul>
               </li>
               <li class="dropdown">
                 <%= link_to "Контакты", contact_path %>
