--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -102,7 +102,10 @@
         <div class="col-sm-2">
           <%= link_to "Добавить продукт", new_product_path, class: "btn btn-warning--reverse-transition" %>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-4">
+        </div>
+        <div class="col-sm-2">
+          <%= link_to "ДД", new_operation_path, class: "btn btn-info--transition" %>
         </div>
         <div class="col-sm-2">
           <%= link_to "Статьи", articles_path, class: "btn btn-info--transition" %>
