--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -98,11 +98,9 @@
                 <dl class="week-day" data-day="1">
                   <dt>
                     Понедел.
-
-
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).monday %>
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="2">
@@ -110,7 +108,7 @@
                     Вторник
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).tuesday %>
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="3">
@@ -118,7 +116,7 @@
                     Среда
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).wednesday %>
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="4">
@@ -126,7 +124,7 @@
                     Четверг
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).thursday %>
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="5">
@@ -134,7 +132,7 @@
                     Пятница
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).friday %>
                   </dd>
                 </dl>
                 <dl class="week-day" data-day="6">
@@ -142,7 +140,7 @@
                     Суббота
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).saturday %>
                   </dd>
                 </dl>
                 <dl class="week-day  closed" data-day="0">
@@ -150,7 +148,7 @@
                     Воскрес.
                   </dt>
                   <dd>
-                    10:00 - 18:00
+                    <%= Operation.find(1).sunday %>
                   </dd>
                 </dl>
               </div>
