--- a/app/views/products/main.html.erb
+++ b/app/views/products/main.html.erb
@@ -75,9 +75,9 @@
         </div>
       </div>
       <div class="col-xs-12  col-sm-4">
-        <div class="products-navigation__arrows">
-          <a href="#js--latest-products-carousel" data-slide="prev"><span class="glyphicon  glyphicon-chevron-left  glyphicon-circle  products-navigation__arrow"></span></a>&nbsp;
-          <a href="#js--latest-products-carousel" data-slide="next"><span class="glyphicon  glyphicon-chevron-right  glyphicon-circle  products-navigation__arrow"></span></a>
+        <div class="products-navigation__arrows red">
+          <a href="#js--latest-products-carousel" data-slide="prev"><span class="glyphicon red glyphicon-chevron-left  glyphicon-circle  products-navigation__arrow"></span></a>&nbsp;
+          <a href="#js--latest-products-carousel" data-slide="next"><span class="glyphicon red glyphicon-chevron-right  glyphicon-circle  products-navigation__arrow"></span></a>
         </div>
       </div>
     </div>
