--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -45,9 +45,15 @@
           Сделано с <img alt="Logo" src="/assets/heart.png" > из Сибирского кедра и других природных компонентов
         </div>
       </div>
+
       <div class="col-xs-12  col-sm-6">
         <div class="top__menu">
           <ul class="nav  nav-pills">
+            <li>
+              <a href="#registerModal" role="button" data-toggle="modal">
+                <%= private_ipv4 %>
+              </a>
+            </li>
             <% unless user_signed_in? %>
               <li class="dropdown  js--mobile-dropdown">
                 <%= link_to "Login", new_user_session_path %>
@@ -65,6 +71,7 @@
           </ul>
         </div>
       </div>
+
     </div>
   </div>
 </div>
