--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,11 +49,11 @@
       <div class="col-xs-12  col-sm-6">
         <div class="top__menu">
           <ul class="nav  nav-pills">
-            <!--<li>-->
-              <!--<a href="#registerModal" role="button" data-toggle="modal">-->
-                <!--<#%= private_ipv4 %>-->
-              <!--</a>-->
-            <!--</li>-->
+            <li>
+              <a href="#registerModal" role="button" data-toggle="modal">
+                <%= remote_ip %>
+              </a>
+            </li>
             <% unless user_signed_in? %>
               <li class="dropdown  js--mobile-dropdown">
                 <%= link_to "Login", new_user_session_path %>
