--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -51,7 +51,7 @@
           <ul class="nav  nav-pills">
             <li>
               <a href="#registerModal" role="button" data-toggle="modal">
-                <%= remote_ip %>
+                <%= remote_city %>
               </a>
             </li>
             <% unless user_signed_in? %>
